[package]
name = "chip8-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"

[dependencies.web-sys]
version = "0.3.55"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window', 'KeyboardEvent']


[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
 
 
